Fixed card dimensions and alignment

--- a/css/sections/_projects.scss
+++ b/css/sections/_projects.scss
@@ -1,3 +1,5 @@
+@import '../variables';
+
 .projects {
   display: flex;
   flex-direction: column;
@@ -63,53 +65,36 @@
 
   /* ==================== Tarjeta ==================== */
   .tarjeta-container {
-    align-items: center;
-    background-color: #00000036;
+    background-color: #00000079;
     display: none;
-    height: 100%;
     justify-content: center;
-    left: 0;
-    position: fixed;
-    top: 0;
+    align-items: center;
+    height: 100%;
     width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
     z-index: 2;
 
     .tarjeta {
-      background: $bgGradient;
-      box-shadow: 0 4px 40px rgba(255, 255, 255, 0.05);
-      color: #cfcfcf;
-      font-size: 1rem;
-      overflow: auto;
-      padding: 24px;
-      position: relative;
-      height: 85%;
-      width: 85%;
-      max-width: 700px;
-
-      border-radius: 20px;
-      -webkit-border-radius: 20px;
-      -moz-border-radius: 20px;
-      -ms-border-radius: 20px;
-      -o-border-radius: 20px;
-      transition: $mainTransition;
-      -webkit-transition: $mainTransition;
-      -moz-transition: $mainTransition;
-      -ms-transition: $mainTransition;
-      -o-transition: $mainTransition;
+      background: $secondaryColor;
+      height: 70%;
+      width: 90%;
+      max-width: 500px;
+      border-radius: 10px;
+      padding: 1rem 1.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
 
       .tarjeta-header {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-        align-items: center;
-        position: absolute;
-        top: 0;
-        left: 0;
         width: 100%;
-        padding: 1rem;
+        height: 5%;
+        display: flex;
+        justify-content: flex-end;
 
         .tarjeta-close-btn {
-          color: #e1e1e1;
+          color: $textColor;
           background: transparent;
           border: none;
           font-size: 1.25rem;
@@ -117,71 +102,55 @@
         }
       }
 
-      .tarjeta-contenido {
-        margin: 24px 0;
+      .tarjeta-body {
+        height: 85%;
         display: flex;
         flex-direction: column;
-        gap: 2rem;
-        font-family: 'Righteous', sans-serif;
-        line-height: 1.5;
+        gap: 1rem;
+        font-size: 1rem;
+        color: $textColor;
 
         .fotos-tarjeta {
-          height: 300px;
-          width: 100%;
+          height: 50%;
           overflow: hidden;
-
           border-radius: 10px;
 
-          img {
-            object-fit: cover;
-            height: 100%;
+          .foto {
             width: 100%;
-            display: inline-block;
+            height: 100%;
+            object-fit: cover;
           }
         }
 
-        .titulo-tarjeta {
-          color: #e1e1e1;
-          font-weight: 500;
-          margin-bottom: 32px;
-        }
+        .nombre-explicacion {
+          height: 50%;
+          font-family: 'Righteous', Arial, Helvetica, sans-serif;
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
 
-        .texto-container {
-          max-height: 250px;
-          overflow: auto;
-
-          &::-webkit-scrollbar {
-            border-radius: 20px;
-            -webkit-border-radius: 20px;
-            -moz-border-radius: 20px;
-            -ms-border-radius: 20px;
-            -o-border-radius: 20px;
-          }
-          &::-webkit-scrollbar-track {
-            border-radius: 20px;
-            -webkit-border-radius: 20px;
-            -moz-border-radius: 20px;
-            -ms-border-radius: 20px;
-            -o-border-radius: 20px;
+          .texto-container {
+            overflow: auto;
           }
         }
       }
 
       .tarjeta-footer {
-        position: absolute;
-        bottom: 0;
-        left: 0;
+        height: 10%;
+        overflow: hidden;
         width: 100%;
-        padding: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-        .logos-tiendas {
+        a {
           display: flex;
-          flex-direction: row;
           justify-content: center;
           align-items: center;
-          gap: 64px;
+
           img {
-            height: 3rem;
+            height: 2rem;
+            width: 2rem;
           }
         }
       }
